--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
           <div class="col-md-3">
             <form class="bg-dark">
               <p>Filter Search</p>
-              <ul class="list-group">
+              <ul class="list-group-item">
                 <li class="list-group-item bg-dark">
                   <label for="datetime">Enter Date</label>
                   <input type="text" placeholder="1/10/2010" id="datetime" />
                 </li>
                 <li class ="list-group-item bg-dark">
-                  <label for="shape">Enter a City</label>
-                  <input type="text" id="city" class="form-control" placeholder="fresno" />
+                  <label for="city">Enter a City</label>
+                  <input type="text" placeholder="fresno" id="city" />
                 </li>
                 <li class ="list-group-item bg-dark">
-                  <label for="shape">Enter a Shape</label>
-                  <input type="text" id="state" class="form-control" placeholder="ca" />
+                  <label for="state">Enter a State</label>
+                  <input type="text"  placeholder="ca" id="state" class="form-control" />
                 </li>
                 <li class ="list-group-item bg-dark">
-                  <label for="shape">Enter a Country</label>
+                  <label for="country">Enter a Country</label>
                   <input type="text" id="country" class="form-control" placeholder="us" />
                 </li>
                 <li class ="list-group-item bg-dark">
